# matrix-mult

./: CMakeLists.txt  benchmark.cpp  cwf-avx.cpp  cwf.hpp  graphite-avx.cpp  graphite.hpp  jodie-avx.cpp  jodie.hpp  name.hpp  original-sse.cpp  original.hpp
